Fix footer spacing

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -11,7 +11,7 @@
     +clear-style
 
     display: grid
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr))
     grid-auto-flow: row dense
     grid-column-gap: 30px
     text-align: center
